test/arrays/cast/cast-to-queried-domain.good
cast-to-queried-domain.chpl:1: error: domain query expressions may currently only be used in formal argument types
