test/arrays/cast/cast-to-queried-domain.chpl
var array = ([1,2,3]: [?D] uint(8));
